--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,104 +1,127 @@
-name: Release
-
-on:
-  workflow_dispatch:
-    branches: [master]
-  release:
-    branches: [master]
-    types: [published]
-
 jobs:
   publish:
-    runs-on: windows-latest
+    runs-on: self-hosted
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4.1.3
+    - continue-on-error: true
+      name: Checkout code
+      uses: actions/checkout@v4.1.3
+    - continue-on-error: true
+      name: Set up JDK 21
+      uses: actions/setup-java@v4.2.1
+      with:
+        distribution: temurin
+        java-version: 21
+    - continue-on-error: true
+      name: Build jar
+      run: gradlew build shadowJar --stacktrace --warning-mode all
+      shell: cmd
+    - continue-on-error: true
+      name: Download WinRun4J
+      uses: suisei-cn/actions-download-file@v1.6.0
+      with:
+        target: .
+        url: https://github.com/poidasmith/winrun4j/files/1822558/winrun4J-0.4.5.zip
+    - continue-on-error: true
+      name: Download ResourceHacker
+      uses: suisei-cn/actions-download-file@v1.6.0
+      with:
+        target: .
+        url: http://www.angusj.com/resourcehacker/resource_hacker.zip
+    - continue-on-error: true
+      name: Initialize resources for installer
+      run: ./installer/init .
+      shell: bash
+    - continue-on-error: true
+      name: Build exe
+      run: '7z x winrun4J-0.4.5.zip -owr4j
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4.2.1
-        with:
-          distribution: temurin
-          java-version: 21
+        7z x resource_hacker.zip -orh
 
-      - name: Build jar
-        run: gradlew build shadowJar --stacktrace --warning-mode all
-        shell: cmd
+        rh\ResourceHacker.exe -open wr4j\winrun4j\bin\WinRun4J64.exe -save "MCA Selector.exe"
+        -action delete -mask ,,
 
-      - name: Download WinRun4J
-        uses: suisei-cn/actions-download-file@v1.6.0
-        with:
-          url: https://github.com/poidasmith/winrun4j/files/1822558/winrun4J-0.4.5.zip
-          target: .
+        wr4j\winrun4j\bin\RCEDIT64.exe /I "MCA Selector.exe" installer\img\icon.ico
 
-      - name: Download ResourceHacker
-        uses: suisei-cn/actions-download-file@v1.6.0
-        with:
-          url: http://www.angusj.com/resourcehacker/resource_hacker.zip
-          target: .
+        wr4j\winrun4j\bin\RCEDIT64.exe /N "MCA Selector.exe" installer\res\winrun4j.ini
 
-      - name: Initialize resources for installer
-        run: ./installer/init .
-        shell: bash
+        rh\ResourceHacker.exe -open installer\res\resource.rc -save resource.res -action
+        compile
 
-      - name: Build exe
-        run: |
-          7z x winrun4J-0.4.5.zip -owr4j
-          7z x resource_hacker.zip -orh
-          rh\ResourceHacker.exe -open wr4j\winrun4j\bin\WinRun4J64.exe -save "MCA Selector.exe" -action delete -mask ,,
-          wr4j\winrun4j\bin\RCEDIT64.exe /I "MCA Selector.exe" installer\img\icon.ico
-          wr4j\winrun4j\bin\RCEDIT64.exe /N "MCA Selector.exe" installer\res\winrun4j.ini
-          rh\ResourceHacker.exe -open installer\res\resource.rc -save resource.res -action compile
-          rh\ResourceHacker.exe -open "MCA Selector.exe" -save "MCA Selector.exe" -action add -resource resource.res
-          move "MCA Selector.exe" build\inno
-        shell: cmd
+        rh\ResourceHacker.exe -open "MCA Selector.exe" -save "MCA Selector.exe" -action
+        add -resource resource.res
 
-      - name: Download 7za
-        uses: suisei-cn/actions-download-file@v1.6.0
-        with:
-          url: https://www.7-zip.org/a/7za920.zip
-          target: .
+        move "MCA Selector.exe" build\inno
 
-      - name: Build installer
-        run: |
-          7z x 7za920.zip -o7z
-          move 7z\7za.exe build\inno
-          "%programfiles(x86)%/Inno Setup 6/iscc.exe" build/inno/inno.iss /q
-        shell: cmd
+        '
+      shell: cmd
+    - continue-on-error: true
+      name: Download 7za
+      uses: suisei-cn/actions-download-file@v1.6.0
+      with:
+        target: .
+        url: https://www.7-zip.org/a/7za920.zip
+    - continue-on-error: true
+      name: Build installer
+      run: '7z x 7za920.zip -o7z
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4.3.3
-        with:
-          name: Artifact
-          path: |
-            build/inno/Output/MCA_Selector_Setup.exe
-            build/libs/mcaselector-2.4.jar
+        move 7z\7za.exe build\inno
 
-      - name: Upload assets
-        uses: AButler/upload-release-assets@v3.0
-        with:
-          files: build/inno/Output/MCA_Selector_Setup.exe;build/libs/mcaselector-2.4.jar
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+        "%programfiles(x86)%/Inno Setup 6/iscc.exe" build/inno/inno.iss /q
 
-      - name: Checkout Wiki
-        uses: actions/checkout@v4.1.3
-        with:
-          repository: Querz/mcaselector-wiki
-          path: mcaselector-wiki
+        '
+      shell: cmd
+    - continue-on-error: true
+      name: Upload artifacts
+      uses: actions/upload-artifact@v4.3.3
+      with:
+        name: Artifact
+        path: 'build/inno/Output/MCA_Selector_Setup.exe
 
-      - name: Update Wiki
-        run: |
-          cd mcaselector-wiki
-          echo -n 2.4 > version.txt
-          ./update_version
-        shell: bash
+          build/libs/mcaselector-2.4.jar
 
-      - name: Push Wiki
-        run: |
-          cd mcaselector-wiki
-          git config --global user.name 'Querz'
-          git config --global user.email 'wiki@querz.net'
-          git config --unset-all http.https://github.com/.extraheader
-          git remote set-url origin https://x-access-token:${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}@github.com/Querz/mcaselector-wiki
-          git commit -am "Automated version update to 2.4"
-          git push
-        shell: bash
+          '
+    - continue-on-error: true
+      name: Upload assets
+      uses: AButler/upload-release-assets@v3.0
+      with:
+        files: build/inno/Output/MCA_Selector_Setup.exe;build/libs/mcaselector-2.4.jar
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+    - continue-on-error: true
+      name: Checkout Wiki
+      uses: actions/checkout@v4.1.3
+      with:
+        path: mcaselector-wiki
+        repository: Querz/mcaselector-wiki
+    - continue-on-error: true
+      name: Update Wiki
+      run: 'cd mcaselector-wiki
+
+        echo -n 2.4 > version.txt
+
+        ./update_version
+
+        '
+      shell: bash
+    - continue-on-error: true
+      name: Push Wiki
+      run: 'cd mcaselector-wiki
+
+        git config --global user.name ''Querz''
+
+        git config --global user.email ''wiki@querz.net''
+
+        git config --unset-all http.https://github.com/.extraheader
+
+        git remote set-url origin https://x-access-token:${{ secrets.GH_PERSONAL_ACCESS_TOKEN
+        }}@github.com/Querz/mcaselector-wiki
+
+        git commit -am "Automated version update to 2.4"
+
+        git push
+
+        '
+      shell: bash
+name: Release
+on:
+  repository_dispatch:
+    types: trigger-ga___release.yml
